# ai-saas

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  documents.py  health.py  model_chat.py  upload.py
backend/app/core/: __init__.py  config.py  logging.py  ollama_client.py
backend/app/db/: chroma_client.py
backend/app/models/: schemas.py
backend/app/services/: chat_memory.py  chunking.py  document_loader.py  embeddings.py  model_chat.py  rag_pipeline.py  retrieval.py
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/api/: client.js
frontend/src/components/: PageHeader.jsx  Sidebar.jsx
frontend/src/pages/: Dashboard.jsx  ModelChat.jsx  Workspace.jsx
