[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.8",
    "fastapi>=0.136.1",
    "langchain>=1.2.16",
    "langchain-community>=0.4.1",
    "ollama>=0.6.2",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymupdf>=1.27.2.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.27",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
